--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,10 @@
       <groupId>info.cukes</groupId>
       <artifactId>cucumber-scala</artifactId>
       <version>1.1.3</version>
+      <!--
+      <artifactId>cucumber-scala_2.10</artifactId>
+      <version>1.1.4-SNAPSHOT</version>
+      -->
       <scope>test</scope>
     </dependency>
   </dependencies>
