--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>com.github.cukespace</groupId>
       <artifactId>cukespace-core</artifactId>
-      <version>1.5.0-SNAPSHOT</version>
+      <version>1.5.0</version>
       <scope>test</scope>
     </dependency>
 
